--- a/package.json
+++ b/package.json
@@ -4,18 +4,29 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "babel-polyfill": "6.8.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "bootstrap": "3.3.6",
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "gm": "^1.23.0",
     "jimp": "^0.2.27",
-    "babel-polyfill": "6.8.0",
-    "bootstrap": "3.3.6",
     "jquery": "2.2.3",
+    "jwt-simple": "^0.5.0",
+    "mongoose": "^4.5.10",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0",
     "react": "15.0.2",
+    "react-cookie": "^0.4.8",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
+    "redux-form": "^6.0.0-rc.3",
     "redux-thunk": "2.0.1",
     "toastr": "2.1.2"
   },
