--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "express": "^4.14.0",
     "gm": "^1.23.0",
     "jimp": "^0.2.27",
-    "jquery": "2.2.3",
+    "jquery": "^2.2.3",
     "jwt-simple": "^0.5.0",
+    "knox": "^0.9.2",
+    "lodash": "^4.15.0",
     "mongoose": "^4.5.10",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
@@ -22,6 +24,7 @@
     "react": "15.0.2",
     "react-cookie": "^0.4.8",
     "react-dom": "15.0.2",
+    "react-dropzone": "^3.5.3",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
@@ -38,6 +41,7 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-1": "^6.13.0",
     "babel-register": "6.8.0",
     "colors": "1.1.2",
     "compression": "1.6.1",
